--- a/todo-list-service/package.json
+++ b/todo-list-service/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.7.5",
+    "axios-oauth-client": "^2.2.0",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.0.2",
     "body-parser": "^1.19.0",
