--- a/auth-service/.choreo/component-config.yaml
+++ b/auth-service/.choreo/component-config.yaml
@@ -1,9 +1,10 @@
 apiVersion: core.choreo.dev/v1beta1
 kind: ComponentConfig
 spec:
-    inbound:
-        - name: auth-service
-          port: 8081
-          type: REST
-          networkVisibility: Public
-          context: /
+  inbound:
+    - name: auth-service
+      port: 8081
+      type: REST
+      networkVisibility: Public
+      context: /
+      schemaFilePath: openapi.yaml
