--- a/todo-list-service/.choreo/component-config.yaml
+++ b/todo-list-service/.choreo/component-config.yaml
@@ -1,9 +1,10 @@
 apiVersion: core.choreo.dev/v1beta1
 kind: ComponentConfig
 spec:
-    inbound:
-        - name: todo-svc
-          port: 8080
-          type: REST
-          networkVisibility: Public
-          context: /
+  inbound:
+    - name: todo-svc
+      port: 8080
+      type: REST
+      networkVisibility: Public
+      context: /
+      schemaFilePath: openapi.yaml
