--- a/todo-list-service/.choreo/component-config.yaml
+++ b/todo-list-service/.choreo/component-config.yaml
@@ -1,10 +1,23 @@
 apiVersion: core.choreo.dev/v1beta1
 kind: ComponentConfig
 spec:
-  inbound:
-    - name: todo-svc
-      port: 8080
-      type: REST
-      networkVisibility: Public
-      context: /
-      schemaFilePath: openapi.yaml
+    inbound:
+        - name: todo-svc
+          port: 8080
+          type: REST
+          networkVisibility: Public
+          context: /
+          schemaFilePath: openapi.yaml
+    outbound:
+        serviceReferences:
+            - name: choreo:///thirdorgkaje/thirdorgproject1/auth-svc2/c5d5a/v1/PUBLIC
+              connectionConfig: 01ef6f60-84f5-180e-bc73-ebf67aa9a5cd
+              env:
+                - from: ServiceURL
+                  to: SERVICE_URL
+                - from: ConsumerKey
+                  to: CONSUMER_KEY
+                - from: ConsumerSecret
+                  to: CONSUMER_SECRET
+                - from: TokenURL
+                  to: TOKEN_URL
