--- a/todo-list-service/package.json
+++ b/todo-list-service/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "axios": "^1.7.5",
     "body-parser": "^1.19.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "axios-oauth-client": "^2.2.0"
   }
 }
